// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`RuleEditor matches snapshot no tier in rule 1`] = `
<div
  class="rule-editor"
>
  <div
    class="title"
  >
    <button
      class="bp6-button bp6-minimal left"
      type="button"
    >
      <span
        class="bp6-button-text"
      >
        loadForever(1x)
      </span>
      <span
        aria-hidden="true"
        class="bp6-icon bp6-icon-caret-down"
      >
        <svg
          data-icon="caret-down"
          height="16"
          role="img"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 0 0-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
    <div
      class="spacer"
    />
    <button
      class="bp6-button bp6-minimal"
      type="button"
    >
      <span
        aria-hidden="true"
        class="bp6-icon bp6-icon-trash"
      >
        <svg
          data-icon="trash"
          height="16"
          role="img"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M14.49 3.99h-13c-.28 0-.5.22-.5.5s.22.5.5.5h.5v10c0 .55.45 1 1 1h10c.55 0 1-.45 1-1v-10h.5c.28 0 .5-.22.5-.5s-.22-.5-.5-.5m-8.5 9c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1zm3 0c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1zm3 0c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1zm2-12h-4c0-.55-.45-1-1-1h-2c-.55 0-1 .45-1 1h-4c-.55 0-1 .45-1 1v1h14v-1c0-.55-.45-1-1-1"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="bp6-collapse"
    style="height: auto; overflow-y: visible; transition: none;"
  >
    <div
      aria-hidden="false"
      class="bp6-collapse-body"
      style="transform: translateY(0); transition: none;"
    >
      <div
        class="rule-detail bp6-card bp6-elevation-2"
      >
        <div
          class="bp6-form-group"
        >
          <div
            class="bp6-form-content"
          >
            <div
              class="bp6-control-group"
              role="group"
            >
              <div
                class="bp6-html-select"
              >
                <select>
                  <option
                    value="loadForever"
                  >
                    loadForever
                  </option>
                  <option
                    value="loadByInterval"
                  >
                    loadByInterval
                  </option>
                  <option
                    value="loadByPeriod"
                  >
                    loadByPeriod
                  </option>
                  <option
                    value="dropForever"
                  >
                    dropForever
                  </option>
                  <option
                    value="dropByInterval"
                  >
                    dropByInterval
                  </option>
                  <option
                    value="dropByPeriod"
                  >
                    dropByPeriod
                  </option>
                  <option
                    value="dropBeforeByPeriod"
                  >
                    dropBeforeByPeriod
                  </option>
                  <option
                    value="broadcastForever"
                  >
                    broadcastForever
                  </option>
                  <option
                    value="broadcastByInterval"
                  >
                    broadcastByInterval
                  </option>
                  <option
                    value="broadcastByPeriod"
                  >
                    broadcastByPeriod
                  </option>
                </select>
                <span
                  class="bp6-icon bp6-icon-double-caret-vertical"
                >
                  <svg
                    data-icon="double-caret-vertical"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <title>
                      Open dropdown
                    </title>
                    <path
                      d="M5 7h6a1.003 1.003 0 0 0 .71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 0 0 5 7m6 2H5a1.003 1.003 0 0 0-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0 0 11 9"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="bp6-form-group"
        >
          <div
            class="bp6-form-content"
          >
            <div
              class="bp6-control-group tiered-replicant"
              role="group"
            >
              <button
                class="bp6-button bp6-minimal"
                style="pointer-events: none;"
                type="button"
              >
                <span
                  class="bp6-button-text"
                >
                  Tier:
                </span>
              </button>
              <div
                class="formatted-input suggestible-input"
              >
                <div
                  class="bp6-input-group bp6-fill"
                >
                  <input
                    aria-disabled="false"
                    class="bp6-input"
                    style="padding-right: 0px;"
                    type="text"
                    value="test1"
                  />
                  <span
                    class="bp6-input-action"
                  >
                    <span
                      class="bp6-popover-target"
                    >
                      <button
                        aria-expanded="false"
                        aria-haspopup="menu"
                        class="bp6-button bp6-minimal"
                        type="button"
                      >
                        <span
                          aria-hidden="true"
                          class="bp6-icon bp6-icon-caret-down"
                        >
                          <svg
                            data-icon="caret-down"
                            height="16"
                            role="img"
                            viewBox="0 0 16 16"
                            width="16"
                          >
                            <path
                              d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 0 0-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </button>
                    </span>
                  </span>
                </div>
              </div>
              <button
                class="bp6-button bp6-minimal"
                style="pointer-events: none;"
                type="button"
              >
                <span
                  class="bp6-button-text"
                >
                  Replicants:
                </span>
              </button>
              <div
                class="bp6-control-group bp6-numeric-input"
                role="group"
              >
                <div
                  class="bp6-input-group"
                >
                  <input
                    aria-disabled="false"
                    aria-valuemax="256"
                    aria-valuemin="0"
                    aria-valuenow="1"
                    autocomplete="off"
                    class="bp6-input"
                    id="numericInput-0"
                    max="256"
                    min="0"
                    role="spinbutton"
                    type="text"
                    value="1"
                  />
                </div>
                <div
                  class="bp6-button-group bp6-vertical bp6-fixed"
                >
                  <button
                    aria-controls="numericInput-0"
                    aria-label="increment"
                    class="bp6-button"
                    type="button"
                  >
                    <span
                      aria-hidden="true"
                      class="bp6-icon bp6-icon-chevron-up"
                    >
                      <svg
                        data-icon="chevron-up"
                        height="16"
                        role="img"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <path
                          d="m12.71 9.29-4-4C8.53 5.11 8.28 5 8 5s-.53.11-.71.29l-4 4a1.003 1.003 0 0 0 1.42 1.42L8 7.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 0 0 .71-1.71"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                  <button
                    aria-controls="numericInput-0"
                    aria-label="decrement"
                    class="bp6-button"
                    type="button"
                  >
                    <span
                      aria-hidden="true"
                      class="bp6-icon bp6-icon-chevron-down"
                    >
                      <svg
                        data-icon="chevron-down"
                        height="16"
                        role="img"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <path
                          d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 0 0-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0 0 12 5"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
              <button
                class="bp6-button"
                type="button"
              >
                <span
                  aria-hidden="true"
                  class="bp6-icon bp6-icon-trash"
                >
                  <svg
                    data-icon="trash"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      d="M14.49 3.99h-13c-.28 0-.5.22-.5.5s.22.5.5.5h.5v10c0 .55.45 1 1 1h10c.55 0 1-.45 1-1v-10h.5c.28 0 .5-.22.5-.5s-.22-.5-.5-.5m-8.5 9c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1zm3 0c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1zm3 0c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1zm2-12h-4c0-.55-.45-1-1-1h-2c-.55 0-1 .45-1 1h-4c-.55 0-1 .45-1 1v1h14v-1c0-.55-.45-1-1-1"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          class="bp6-form-group"
        >
          <div
            class="bp6-form-content"
          >
            <button
              class="bp6-button bp6-minimal"
              type="button"
            >
              <span
                aria-hidden="true"
                class="bp6-icon bp6-icon-plus"
              >
                <svg
                  data-icon="plus"
                  height="16"
                  role="img"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <span
                class="bp6-button-text"
              >
                Add historical tier replication
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RuleEditor matches snapshot with broadcast rule 1`] = `
<div
  class="rule-editor"
>
  <div
    class="title"
  >
    <button
      class="bp6-button bp6-minimal left"
      type="button"
    >
      <span
        class="bp6-button-text"
      >
        broadcastByInterval(2010-01-01/2015-01-01)
      </span>
      <span
        aria-hidden="true"
        class="bp6-icon bp6-icon-caret-down"
      >
        <svg
          data-icon="caret-down"
          height="16"
          role="img"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 0 0-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
    <div
      class="spacer"
    />
    <button
      class="bp6-button bp6-minimal"
      type="button"
    >
      <span
        aria-hidden="true"
        class="bp6-icon bp6-icon-trash"
      >
        <svg
          data-icon="trash"
          height="16"
          role="img"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M14.49 3.99h-13c-.28 0-.5.22-.5.5s.22.5.5.5h.5v10c0 .55.45 1 1 1h10c.55 0 1-.45 1-1v-10h.5c.28 0 .5-.22.5-.5s-.22-.5-.5-.5m-8.5 9c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1zm3 0c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1zm3 0c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1zm2-12h-4c0-.55-.45-1-1-1h-2c-.55 0-1 .45-1 1h-4c-.55 0-1 .45-1 1v1h14v-1c0-.55-.45-1-1-1"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="bp6-collapse"
    style="height: auto; overflow-y: visible; transition: none;"
  >
    <div
      aria-hidden="false"
      class="bp6-collapse-body"
      style="transform: translateY(0); transition: none;"
    >
      <div
        class="rule-detail bp6-card bp6-elevation-2"
      >
        <div
          class="bp6-form-group"
        >
          <div
            class="bp6-form-content"
          >
            <div
              class="bp6-control-group"
              role="group"
            >
              <div
                class="bp6-html-select"
              >
                <select>
                  <option
                    value="loadForever"
                  >
                    loadForever
                  </option>
                  <option
                    value="loadByInterval"
                  >
                    loadByInterval
                  </option>
                  <option
                    value="loadByPeriod"
                  >
                    loadByPeriod
                  </option>
                  <option
                    value="dropForever"
                  >
                    dropForever
                  </option>
                  <option
                    value="dropByInterval"
                  >
                    dropByInterval
                  </option>
                  <option
                    value="dropByPeriod"
                  >
                    dropByPeriod
                  </option>
                  <option
                    value="dropBeforeByPeriod"
                  >
                    dropBeforeByPeriod
                  </option>
                  <option
                    value="broadcastForever"
                  >
                    broadcastForever
                  </option>
                  <option
                    value="broadcastByInterval"
                  >
                    broadcastByInterval
                  </option>
                  <option
                    value="broadcastByPeriod"
                  >
                    broadcastByPeriod
                  </option>
                </select>
                <span
                  class="bp6-icon bp6-icon-double-caret-vertical"
                >
                  <svg
                    data-icon="double-caret-vertical"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <title>
                      Open dropdown
                    </title>
                    <path
                      d="M5 7h6a1.003 1.003 0 0 0 .71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 0 0 5 7m6 2H5a1.003 1.003 0 0 0-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0 0 11 9"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="bp6-input-group"
              >
                <input
                  class="bp6-input"
                  placeholder="2010-01-01/2020-01-01"
                  type="text"
                  value="2010-01-01/2015-01-01"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RuleEditor matches snapshot with existing tier and non existing tier in rule 1`] = `
<div
  class="rule-editor"
>
  <div
    class="title"
  >
    <button
      class="bp6-button bp6-minimal left"
      type="button"
    >
      <span
        class="bp6-button-text"
      >
        loadByInterval(2010-01-01/2015-01-01, 3x)
      </span>
      <span
        aria-hidden="true"
        class="bp6-icon bp6-icon-caret-down"
      >
        <svg
          data-icon="caret-down"
          height="16"
          role="img"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 0 0-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
    <div
      class="spacer"
    />
    <button
      class="bp6-button bp6-minimal"
      type="button"
    >
      <span
        aria-hidden="true"
        class="bp6-icon bp6-icon-trash"
      >
        <svg
          data-icon="trash"
          height="16"
          role="img"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M14.49 3.99h-13c-.28 0-.5.22-.5.5s.22.5.5.5h.5v10c0 .55.45 1 1 1h10c.55 0 1-.45 1-1v-10h.5c.28 0 .5-.22.5-.5s-.22-.5-.5-.5m-8.5 9c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1zm3 0c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1zm3 0c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1zm2-12h-4c0-.55-.45-1-1-1h-2c-.55 0-1 .45-1 1h-4c-.55 0-1 .45-1 1v1h14v-1c0-.55-.45-1-1-1"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="bp6-collapse"
    style="height: auto; overflow-y: visible; transition: none;"
  >
    <div
      aria-hidden="false"
      class="bp6-collapse-body"
      style="transform: translateY(0); transition: none;"
    >
      <div
        class="rule-detail bp6-card bp6-elevation-2"
      >
        <div
          class="bp6-form-group"
        >
          <div
            class="bp6-form-content"
          >
            <div
              class="bp6-control-group"
              role="group"
            >
              <div
                class="bp6-html-select"
              >
                <select>
                  <option
                    value="loadForever"
                  >
                    loadForever
                  </option>
                  <option
                    value="loadByInterval"
                  >
                    loadByInterval
                  </option>
                  <option
                    value="loadByPeriod"
                  >
                    loadByPeriod
                  </option>
                  <option
                    value="dropForever"
                  >
                    dropForever
                  </option>
                  <option
                    value="dropByInterval"
                  >
                    dropByInterval
                  </option>
                  <option
                    value="dropByPeriod"
                  >
                    dropByPeriod
                  </option>
                  <option
                    value="dropBeforeByPeriod"
                  >
                    dropBeforeByPeriod
                  </option>
                  <option
                    value="broadcastForever"
                  >
                    broadcastForever
                  </option>
                  <option
                    value="broadcastByInterval"
                  >
                    broadcastByInterval
                  </option>
                  <option
                    value="broadcastByPeriod"
                  >
                    broadcastByPeriod
                  </option>
                </select>
                <span
                  class="bp6-icon bp6-icon-double-caret-vertical"
                >
                  <svg
                    data-icon="double-caret-vertical"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <title>
                      Open dropdown
                    </title>
                    <path
                      d="M5 7h6a1.003 1.003 0 0 0 .71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 0 0 5 7m6 2H5a1.003 1.003 0 0 0-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0 0 11 9"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="bp6-input-group"
              >
                <input
                  class="bp6-input"
                  placeholder="2010-01-01/2020-01-01"
                  type="text"
                  value="2010-01-01/2015-01-01"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="bp6-form-group"
        >
          <div
            class="bp6-form-content"
          >
            <div
              class="bp6-control-group tiered-replicant"
              role="group"
            >
              <button
                class="bp6-button bp6-minimal"
                style="pointer-events: none;"
                type="button"
              >
                <span
                  class="bp6-button-text"
                >
                  Tier:
                </span>
              </button>
              <div
                class="formatted-input suggestible-input"
              >
                <div
                  class="bp6-input-group bp6-fill"
                >
                  <input
                    aria-disabled="false"
                    class="bp6-input"
                    style="padding-right: 0px;"
                    type="text"
                    value="test1"
                  />
                  <span
                    class="bp6-input-action"
                  >
                    <span
                      class="bp6-popover-target"
                    >
                      <button
                        aria-expanded="false"
                        aria-haspopup="menu"
                        class="bp6-button bp6-minimal"
                        type="button"
                      >
                        <span
                          aria-hidden="true"
                          class="bp6-icon bp6-icon-caret-down"
                        >
                          <svg
                            data-icon="caret-down"
                            height="16"
                            role="img"
                            viewBox="0 0 16 16"
                            width="16"
                          >
                            <path
                              d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 0 0-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </button>
                    </span>
                  </span>
                </div>
              </div>
              <button
                class="bp6-button bp6-minimal"
                style="pointer-events: none;"
                type="button"
              >
                <span
                  class="bp6-button-text"
                >
                  Replicants:
                </span>
              </button>
              <div
                class="bp6-control-group bp6-numeric-input"
                role="group"
              >
                <div
                  class="bp6-input-group"
                >
                  <input
                    aria-disabled="false"
                    aria-valuemax="256"
                    aria-valuemin="0"
                    aria-valuenow="2"
                    autocomplete="off"
                    class="bp6-input"
                    id="numericInput-3"
                    max="256"
                    min="0"
                    role="spinbutton"
                    type="text"
                    value="2"
                  />
                </div>
                <div
                  class="bp6-button-group bp6-vertical bp6-fixed"
                >
                  <button
                    aria-controls="numericInput-3"
                    aria-label="increment"
                    class="bp6-button"
                    type="button"
                  >
                    <span
                      aria-hidden="true"
                      class="bp6-icon bp6-icon-chevron-up"
                    >
                      <svg
                        data-icon="chevron-up"
                        height="16"
                        role="img"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <path
                          d="m12.71 9.29-4-4C8.53 5.11 8.28 5 8 5s-.53.11-.71.29l-4 4a1.003 1.003 0 0 0 1.42 1.42L8 7.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 0 0 .71-1.71"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                  <button
                    aria-controls="numericInput-3"
                    aria-label="decrement"
                    class="bp6-button"
                    type="button"
                  >
                    <span
                      aria-hidden="true"
                      class="bp6-icon bp6-icon-chevron-down"
                    >
                      <svg
                        data-icon="chevron-down"
                        height="16"
                        role="img"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <path
                          d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 0 0-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0 0 12 5"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
              <button
                class="bp6-button"
                type="button"
              >
                <span
                  aria-hidden="true"
                  class="bp6-icon bp6-icon-trash"
                >
                  <svg
                    data-icon="trash"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      d="M14.49 3.99h-13c-.28 0-.5.22-.5.5s.22.5.5.5h.5v10c0 .55.45 1 1 1h10c.55 0 1-.45 1-1v-10h.5c.28 0 .5-.22.5-.5s-.22-.5-.5-.5m-8.5 9c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1zm3 0c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1zm3 0c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1zm2-12h-4c0-.55-.45-1-1-1h-2c-.55 0-1 .45-1 1h-4c-.55 0-1 .45-1 1v1h14v-1c0-.55-.45-1-1-1"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </div>
            <div
              class="bp6-control-group tiered-replicant"
              role="group"
            >
              <button
                class="bp6-button bp6-minimal"
                style="pointer-events: none;"
                type="button"
              >
                <span
                  class="bp6-button-text"
                >
                  Tier:
                </span>
              </button>
              <div
                class="formatted-input suggestible-input"
              >
                <div
                  class="bp6-input-group bp6-fill"
                >
                  <input
                    aria-disabled="false"
                    class="bp6-input"
                    style="padding-right: 0px;"
                    type="text"
                    value="nonexist"
                  />
                  <span
                    class="bp6-input-action"
                  >
                    <span
                      class="bp6-popover-target"
                    >
                      <button
                        aria-expanded="false"
                        aria-haspopup="menu"
                        class="bp6-button bp6-minimal"
                        type="button"
                      >
                        <span
                          aria-hidden="true"
                          class="bp6-icon bp6-icon-caret-down"
                        >
                          <svg
                            data-icon="caret-down"
                            height="16"
                            role="img"
                            viewBox="0 0 16 16"
                            width="16"
                          >
                            <path
                              d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 0 0-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </button>
                    </span>
                  </span>
                </div>
              </div>
              <button
                class="bp6-button bp6-minimal"
                style="pointer-events: none;"
                type="button"
              >
                <span
                  class="bp6-button-text"
                >
                  Replicants:
                </span>
              </button>
              <div
                class="bp6-control-group bp6-numeric-input"
                role="group"
              >
                <div
                  class="bp6-input-group"
                >
                  <input
                    aria-disabled="false"
                    aria-valuemax="256"
                    aria-valuemin="0"
                    aria-valuenow="1"
                    autocomplete="off"
                    class="bp6-input"
                    id="numericInput-4"
                    max="256"
                    min="0"
                    role="spinbutton"
                    type="text"
                    value="1"
                  />
                </div>
                <div
                  class="bp6-button-group bp6-vertical bp6-fixed"
                >
                  <button
                    aria-controls="numericInput-4"
                    aria-label="increment"
                    class="bp6-button"
                    type="button"
                  >
                    <span
                      aria-hidden="true"
                      class="bp6-icon bp6-icon-chevron-up"
                    >
                      <svg
                        data-icon="chevron-up"
                        height="16"
                        role="img"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <path
                          d="m12.71 9.29-4-4C8.53 5.11 8.28 5 8 5s-.53.11-.71.29l-4 4a1.003 1.003 0 0 0 1.42 1.42L8 7.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 0 0 .71-1.71"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                  <button
                    aria-controls="numericInput-4"
                    aria-label="decrement"
                    class="bp6-button"
                    type="button"
                  >
                    <span
                      aria-hidden="true"
                      class="bp6-icon bp6-icon-chevron-down"
                    >
                      <svg
                        data-icon="chevron-down"
                        height="16"
                        role="img"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <path
                          d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 0 0-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0 0 12 5"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
              <button
                class="bp6-button"
                type="button"
              >
                <span
                  aria-hidden="true"
                  class="bp6-icon bp6-icon-trash"
                >
                  <svg
                    data-icon="trash"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      d="M14.49 3.99h-13c-.28 0-.5.22-.5.5s.22.5.5.5h.5v10c0 .55.45 1 1 1h10c.55 0 1-.45 1-1v-10h.5c.28 0 .5-.22.5-.5s-.22-.5-.5-.5m-8.5 9c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1zm3 0c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1zm3 0c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1zm2-12h-4c0-.55-.45-1-1-1h-2c-.55 0-1 .45-1 1h-4c-.55 0-1 .45-1 1v1h14v-1c0-.55-.45-1-1-1"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          class="bp6-form-group"
        >
          <div
            class="bp6-form-content"
          >
            <button
              class="bp6-button bp6-minimal"
              type="button"
            >
              <span
                aria-hidden="true"
                class="bp6-icon bp6-icon-plus"
              >
                <svg
                  data-icon="plus"
                  height="16"
                  role="img"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <span
                class="bp6-button-text"
              >
                Add historical tier replication
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RuleEditor matches snapshot with existing tier in rule 1`] = `
<div
  class="rule-editor"
>
  <div
    class="title"
  >
    <button
      class="bp6-button bp6-minimal left"
      type="button"
    >
      <span
        class="bp6-button-text"
      >
        loadByInterval(2010-01-01/2015-01-01, 2x)
      </span>
      <span
        aria-hidden="true"
        class="bp6-icon bp6-icon-caret-down"
      >
        <svg
          data-icon="caret-down"
          height="16"
          role="img"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 0 0-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
    <div
      class="spacer"
    />
    <button
      class="bp6-button bp6-minimal"
      type="button"
    >
      <span
        aria-hidden="true"
        class="bp6-icon bp6-icon-trash"
      >
        <svg
          data-icon="trash"
          height="16"
          role="img"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M14.49 3.99h-13c-.28 0-.5.22-.5.5s.22.5.5.5h.5v10c0 .55.45 1 1 1h10c.55 0 1-.45 1-1v-10h.5c.28 0 .5-.22.5-.5s-.22-.5-.5-.5m-8.5 9c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1zm3 0c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1zm3 0c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1zm2-12h-4c0-.55-.45-1-1-1h-2c-.55 0-1 .45-1 1h-4c-.55 0-1 .45-1 1v1h14v-1c0-.55-.45-1-1-1"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="bp6-collapse"
    style="height: auto; overflow-y: visible; transition: none;"
  >
    <div
      aria-hidden="false"
      class="bp6-collapse-body"
      style="transform: translateY(0); transition: none;"
    >
      <div
        class="rule-detail bp6-card bp6-elevation-2"
      >
        <div
          class="bp6-form-group"
        >
          <div
            class="bp6-form-content"
          >
            <div
              class="bp6-control-group"
              role="group"
            >
              <div
                class="bp6-html-select"
              >
                <select>
                  <option
                    value="loadForever"
                  >
                    loadForever
                  </option>
                  <option
                    value="loadByInterval"
                  >
                    loadByInterval
                  </option>
                  <option
                    value="loadByPeriod"
                  >
                    loadByPeriod
                  </option>
                  <option
                    value="dropForever"
                  >
                    dropForever
                  </option>
                  <option
                    value="dropByInterval"
                  >
                    dropByInterval
                  </option>
                  <option
                    value="dropByPeriod"
                  >
                    dropByPeriod
                  </option>
                  <option
                    value="dropBeforeByPeriod"
                  >
                    dropBeforeByPeriod
                  </option>
                  <option
                    value="broadcastForever"
                  >
                    broadcastForever
                  </option>
                  <option
                    value="broadcastByInterval"
                  >
                    broadcastByInterval
                  </option>
                  <option
                    value="broadcastByPeriod"
                  >
                    broadcastByPeriod
                  </option>
                </select>
                <span
                  class="bp6-icon bp6-icon-double-caret-vertical"
                >
                  <svg
                    data-icon="double-caret-vertical"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <title>
                      Open dropdown
                    </title>
                    <path
                      d="M5 7h6a1.003 1.003 0 0 0 .71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 0 0 5 7m6 2H5a1.003 1.003 0 0 0-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0 0 11 9"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="bp6-input-group"
              >
                <input
                  class="bp6-input"
                  placeholder="2010-01-01/2020-01-01"
                  type="text"
                  value="2010-01-01/2015-01-01"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="bp6-form-group"
        >
          <div
            class="bp6-form-content"
          >
            <div
              class="bp6-control-group tiered-replicant"
              role="group"
            >
              <button
                class="bp6-button bp6-minimal"
                style="pointer-events: none;"
                type="button"
              >
                <span
                  class="bp6-button-text"
                >
                  Tier:
                </span>
              </button>
              <div
                class="formatted-input suggestible-input"
              >
                <div
                  class="bp6-input-group bp6-fill"
                >
                  <input
                    aria-disabled="false"
                    class="bp6-input"
                    style="padding-right: 0px;"
                    type="text"
                    value="test1"
                  />
                  <span
                    class="bp6-input-action"
                  >
                    <span
                      class="bp6-popover-target"
                    >
                      <button
                        aria-expanded="false"
                        aria-haspopup="menu"
                        class="bp6-button bp6-minimal"
                        type="button"
                      >
                        <span
                          aria-hidden="true"
                          class="bp6-icon bp6-icon-caret-down"
                        >
                          <svg
                            data-icon="caret-down"
                            height="16"
                            role="img"
                            viewBox="0 0 16 16"
                            width="16"
                          >
                            <path
                              d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 0 0-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </button>
                    </span>
                  </span>
                </div>
              </div>
              <button
                class="bp6-button bp6-minimal"
                style="pointer-events: none;"
                type="button"
              >
                <span
                  class="bp6-button-text"
                >
                  Replicants:
                </span>
              </button>
              <div
                class="bp6-control-group bp6-numeric-input"
                role="group"
              >
                <div
                  class="bp6-input-group"
                >
                  <input
                    aria-disabled="false"
                    aria-valuemax="256"
                    aria-valuemin="0"
                    aria-valuenow="2"
                    autocomplete="off"
                    class="bp6-input"
                    id="numericInput-2"
                    max="256"
                    min="0"
                    role="spinbutton"
                    type="text"
                    value="2"
                  />
                </div>
                <div
                  class="bp6-button-group bp6-vertical bp6-fixed"
                >
                  <button
                    aria-controls="numericInput-2"
                    aria-label="increment"
                    class="bp6-button"
                    type="button"
                  >
                    <span
                      aria-hidden="true"
                      class="bp6-icon bp6-icon-chevron-up"
                    >
                      <svg
                        data-icon="chevron-up"
                        height="16"
                        role="img"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <path
                          d="m12.71 9.29-4-4C8.53 5.11 8.28 5 8 5s-.53.11-.71.29l-4 4a1.003 1.003 0 0 0 1.42 1.42L8 7.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 0 0 .71-1.71"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                  <button
                    aria-controls="numericInput-2"
                    aria-label="decrement"
                    class="bp6-button"
                    type="button"
                  >
                    <span
                      aria-hidden="true"
                      class="bp6-icon bp6-icon-chevron-down"
                    >
                      <svg
                        data-icon="chevron-down"
                        height="16"
                        role="img"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <path
                          d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 0 0-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0 0 12 5"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
              <button
                class="bp6-button"
                type="button"
              >
                <span
                  aria-hidden="true"
                  class="bp6-icon bp6-icon-trash"
                >
                  <svg
                    data-icon="trash"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      d="M14.49 3.99h-13c-.28 0-.5.22-.5.5s.22.5.5.5h.5v10c0 .55.45 1 1 1h10c.55 0 1-.45 1-1v-10h.5c.28 0 .5-.22.5-.5s-.22-.5-.5-.5m-8.5 9c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1zm3 0c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1zm3 0c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1zm2-12h-4c0-.55-.45-1-1-1h-2c-.55 0-1 .45-1 1h-4c-.55 0-1 .45-1 1v1h14v-1c0-.55-.45-1-1-1"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          class="bp6-form-group"
        >
          <div
            class="bp6-form-content"
          >
            <button
              class="bp6-button bp6-minimal"
              type="button"
            >
              <span
                aria-hidden="true"
                class="bp6-icon bp6-icon-plus"
              >
                <svg
                  data-icon="plus"
                  height="16"
                  role="img"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <span
                class="bp6-button-text"
              >
                Add historical tier replication
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RuleEditor matches snapshot with non existing tier in rule 1`] = `
<div
  class="rule-editor"
>
  <div
    class="title"
  >
    <button
      class="bp6-button bp6-minimal left"
      type="button"
    >
      <span
        class="bp6-button-text"
      >
        loadByInterval(2010-01-01/2015-01-01, 2x)
      </span>
      <span
        aria-hidden="true"
        class="bp6-icon bp6-icon-caret-down"
      >
        <svg
          data-icon="caret-down"
          height="16"
          role="img"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 0 0-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
    <div
      class="spacer"
    />
    <button
      class="bp6-button bp6-minimal"
      type="button"
    >
      <span
        aria-hidden="true"
        class="bp6-icon bp6-icon-trash"
      >
        <svg
          data-icon="trash"
          height="16"
          role="img"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M14.49 3.99h-13c-.28 0-.5.22-.5.5s.22.5.5.5h.5v10c0 .55.45 1 1 1h10c.55 0 1-.45 1-1v-10h.5c.28 0 .5-.22.5-.5s-.22-.5-.5-.5m-8.5 9c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1zm3 0c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1zm3 0c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1zm2-12h-4c0-.55-.45-1-1-1h-2c-.55 0-1 .45-1 1h-4c-.55 0-1 .45-1 1v1h14v-1c0-.55-.45-1-1-1"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="bp6-collapse"
    style="height: auto; overflow-y: visible; transition: none;"
  >
    <div
      aria-hidden="false"
      class="bp6-collapse-body"
      style="transform: translateY(0); transition: none;"
    >
      <div
        class="rule-detail bp6-card bp6-elevation-2"
      >
        <div
          class="bp6-form-group"
        >
          <div
            class="bp6-form-content"
          >
            <div
              class="bp6-control-group"
              role="group"
            >
              <div
                class="bp6-html-select"
              >
                <select>
                  <option
                    value="loadForever"
                  >
                    loadForever
                  </option>
                  <option
                    value="loadByInterval"
                  >
                    loadByInterval
                  </option>
                  <option
                    value="loadByPeriod"
                  >
                    loadByPeriod
                  </option>
                  <option
                    value="dropForever"
                  >
                    dropForever
                  </option>
                  <option
                    value="dropByInterval"
                  >
                    dropByInterval
                  </option>
                  <option
                    value="dropByPeriod"
                  >
                    dropByPeriod
                  </option>
                  <option
                    value="dropBeforeByPeriod"
                  >
                    dropBeforeByPeriod
                  </option>
                  <option
                    value="broadcastForever"
                  >
                    broadcastForever
                  </option>
                  <option
                    value="broadcastByInterval"
                  >
                    broadcastByInterval
                  </option>
                  <option
                    value="broadcastByPeriod"
                  >
                    broadcastByPeriod
                  </option>
                </select>
                <span
                  class="bp6-icon bp6-icon-double-caret-vertical"
                >
                  <svg
                    data-icon="double-caret-vertical"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <title>
                      Open dropdown
                    </title>
                    <path
                      d="M5 7h6a1.003 1.003 0 0 0 .71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 0 0 5 7m6 2H5a1.003 1.003 0 0 0-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0 0 11 9"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="bp6-input-group"
              >
                <input
                  class="bp6-input"
                  placeholder="2010-01-01/2020-01-01"
                  type="text"
                  value="2010-01-01/2015-01-01"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="bp6-form-group"
        >
          <div
            class="bp6-form-content"
          >
            <div
              class="bp6-control-group tiered-replicant"
              role="group"
            >
              <button
                class="bp6-button bp6-minimal"
                style="pointer-events: none;"
                type="button"
              >
                <span
                  class="bp6-button-text"
                >
                  Tier:
                </span>
              </button>
              <div
                class="formatted-input suggestible-input"
              >
                <div
                  class="bp6-input-group bp6-fill"
                >
                  <input
                    aria-disabled="false"
                    class="bp6-input"
                    style="padding-right: 0px;"
                    type="text"
                    value="nonexist"
                  />
                  <span
                    class="bp6-input-action"
                  >
                    <span
                      class="bp6-popover-target"
                    >
                      <button
                        aria-expanded="false"
                        aria-haspopup="menu"
                        class="bp6-button bp6-minimal"
                        type="button"
                      >
                        <span
                          aria-hidden="true"
                          class="bp6-icon bp6-icon-caret-down"
                        >
                          <svg
                            data-icon="caret-down"
                            height="16"
                            role="img"
                            viewBox="0 0 16 16"
                            width="16"
                          >
                            <path
                              d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 0 0-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </button>
                    </span>
                  </span>
                </div>
              </div>
              <button
                class="bp6-button bp6-minimal"
                style="pointer-events: none;"
                type="button"
              >
                <span
                  class="bp6-button-text"
                >
                  Replicants:
                </span>
              </button>
              <div
                class="bp6-control-group bp6-numeric-input"
                role="group"
              >
                <div
                  class="bp6-input-group"
                >
                  <input
                    aria-disabled="false"
                    aria-valuemax="256"
                    aria-valuemin="0"
                    aria-valuenow="2"
                    autocomplete="off"
                    class="bp6-input"
                    id="numericInput-1"
                    max="256"
                    min="0"
                    role="spinbutton"
                    type="text"
                    value="2"
                  />
                </div>
                <div
                  class="bp6-button-group bp6-vertical bp6-fixed"
                >
                  <button
                    aria-controls="numericInput-1"
                    aria-label="increment"
                    class="bp6-button"
                    type="button"
                  >
                    <span
                      aria-hidden="true"
                      class="bp6-icon bp6-icon-chevron-up"
                    >
                      <svg
                        data-icon="chevron-up"
                        height="16"
                        role="img"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <path
                          d="m12.71 9.29-4-4C8.53 5.11 8.28 5 8 5s-.53.11-.71.29l-4 4a1.003 1.003 0 0 0 1.42 1.42L8 7.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 0 0 .71-1.71"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                  <button
                    aria-controls="numericInput-1"
                    aria-label="decrement"
                    class="bp6-button"
                    type="button"
                  >
                    <span
                      aria-hidden="true"
                      class="bp6-icon bp6-icon-chevron-down"
                    >
                      <svg
                        data-icon="chevron-down"
                        height="16"
                        role="img"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <path
                          d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 0 0-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0 0 12 5"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
              <button
                class="bp6-button"
                type="button"
              >
                <span
                  aria-hidden="true"
                  class="bp6-icon bp6-icon-trash"
                >
                  <svg
                    data-icon="trash"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      d="M14.49 3.99h-13c-.28 0-.5.22-.5.5s.22.5.5.5h.5v10c0 .55.45 1 1 1h10c.55 0 1-.45 1-1v-10h.5c.28 0 .5-.22.5-.5s-.22-.5-.5-.5m-8.5 9c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1zm3 0c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1zm3 0c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1zm2-12h-4c0-.55-.45-1-1-1h-2c-.55 0-1 .45-1 1h-4c-.55 0-1 .45-1 1v1h14v-1c0-.55-.45-1-1-1"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          class="bp6-form-group"
        >
          <div
            class="bp6-form-content"
          >
            <button
              class="bp6-button bp6-minimal"
              type="button"
            >
              <span
                aria-hidden="true"
                class="bp6-icon bp6-icon-plus"
              >
                <svg
                  data-icon="plus"
                  height="16"
                  role="img"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <span
                class="bp6-button-text"
              >
                Add historical tier replication
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
